--- a/package.json
+++ b/package.json
@@ -6,16 +6,28 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.15.6",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "dotenv-webpack": "^7.0.2",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^11.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build & cd build copy index.html 200.html & surge"
   },
   "eslintConfig": {
     "extends": [
